<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NotificationActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gotoGithubBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/snackbarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/show_snackbar"
        android:textAllCaps="false"
        android:layout_marginTop="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showNotificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/snackbarBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/show_notification"
        android:textAllCaps="false"
        android:layout_marginTop="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateNotificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/showNotificationBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/update_notification"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:enabled="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelNotificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/updateNotificationBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cancel_current_notification"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>